# github-agent

./: .gitignore  .mcp.json  CODE_CONTEXT_DOCUMENT.md  PRE_COMMIT_SCRIPTS.md  README.md  TESTING.md  abstract_document_symbol_provider.py  abstract_symbol_extractor.py  async_codebase_lsp_client.py  async_lsp_client.py  codebase_cli.py  codebase_tools.py  comprehensive_test_fix.py  debug_lsp.py  design-synthesis-add-user-authentication.md  design-synthesis-document-symbol-hierarchy.md  design_document_symbol_hierarchy.md  design_document_symbol_hierarchy_senior_engineer.md  design_document_test_first_symbol_hierarchy.md  document_symbol_config.py  document_symbol_hierarchy_architectural_design.md  document_symbol_hierarchy_design.md  document_symbol_hierarchy_rapid_implementation.md  document_symbol_provider.py  errors.py  fast_coder_document_symbol_hierarchy_design.md  fix_remaining_tests.py  github_agent_mcp.py  github_tools.py  lsp_client.py  lsp_constants.py  lsp_jsonrpc_new.py  lsp_server_factory.py  lsp_server_manager.py  lsp_symbol_mapping.py  mcp_master.py  mcp_stdio_bridge.py  mcp_worker.py  pylsp_manager.py  pyproject.toml  (+16 more)
.workflow/: codebase_analysis.md  context_pr_63.json  context_pr_65.json  task_metadata.json  task_specification.md
config/: repositories.example.json  repositories_schema.json
improvements/: claude-code-multi-agent-guide.md  enhanced_workflow_system.md  finalized_design.md  langgraph-workflow-refactoring-plan.md  langgraph_agentic_workflow.md  langgraph_migration_design.md  langgraph_migration_tasks.md  lsp-feature-extensions-for-coding-agents.md  mcp_codebase_server_design.md  mcp_codebase_server_user_stories.md  multiagent-workflow.md  pr_reply_persisting.txt
langgraph_workflow/: README.md  WORKFLOW_ARCHITECTURE.md  __init__.py  agent_personas.py  cli.py  config.py  constants.py  enhanced_workflow.py  enums.py  github_integration.py  graph.py  interfaces.py  langgraph.json  langgraph_workflow.py  mocks.py  node_config.py  proper_langgraph_workflow.py  pytest.ini  real_codebase_analyzer.py  requirements.txt  run.py  server.py  startup_validation.py  state.py  workflow_comparison.py  workflow_state.py
multi-agent-workflow/: __init__.py  agent_interface.py  coding_personas.py  run_phase1_analysis.py  run_phase3_implementation.py  run_phase3_implementation_new.py  run_phase3_implementation_simple.py  step1_analysis.py  step2_create_design_document.py  step3_finalize_design_document.py  step4_implementation.py  task_context.py  test_amp_cli.py  test_amp_wrapper.py  test_parallel_amp.py  test_phase3_simple.py  test_system_prompt.py  workflow_orchestrator.py
multi_agent_workflow/: PERSONAS_README.md  README.md  README_ENHANCED_WORKFLOW.md  __init__.py  agent_collaboration_design.md  agent_interface.py  amp_cli_wrapper.py  claude_code_cli_wrapper.py  claude_code_example.py  codebase_analyzer.py  coding_personas.py  common_utils.py  config_manager.py  conflict_resolver.py  enhanced_workflow_orchestrator.py  error_handling.py  example_task.md  feedback_processor.py  git_integrator.py  github_integrator.py  logging_config.py  mypy.ini  output_manager.py  pause_resume.py  run_enhanced_workflow.py  state_versioning.py  step1_analysis.py  step2_create_design_document.py  step3_finalize_design_document.py  step4_implementation.py  task-breakdown-us006.md  task_context.py  test_personas_demo.py  workflow.py  workflow_orchestrator.py  workflow_state.py
scripts/: deploy.sh  run-integration-tests.sh
setup/: setup_system.sh
tests/: conftest.py  fixtures.py  test_abstract_symbol_extractor.py  test_async_lsp_client.py  test_circular_dependencies.py  test_client_manager.py  test_codebase_cli.py  test_codebase_cli_integration.py  test_codebase_lsp_tools.py  (+60 more)
(+146 files in other folders)
