[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-agent"
version = "0.1.0"
description = "GitHub Agent for repository management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
# Dependencies are handled through the requirements.txt file which is used to setup the local dev environment, run the server but also setup the github CI runners.
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".venv",
    "venv",
    ".mypy_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by line-length)
    "T201",  # print found (allow print statements for now)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]  # Allow print statements in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=xml",
    "--cov-report=lcov",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "asyncio: marks tests as async tests that need asyncio support",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "setup/*",
    ".venv/*",
    "venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.tox/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process_args for common cases

[tool.pylsp-mypy]
enabled = false
live_mode = false

[tool.pylsp.plugins]
# Disable expensive plugins that cause timeouts on large codebases
autopep8.enabled = false
flake8.enabled = false
mccabe.enabled = false
preload.enabled = false
pycodestyle.enabled = false
pydocstyle.enabled = false
pyflakes.enabled = false
pylint.enabled = false
rope_autoimport.enabled = false
rope_completion.enabled = false
yapf.enabled = false

# Keep only essential plugins
jedi_completion.enabled = true
jedi_completion.include_params = false
jedi_completion.include_class_objects = false
jedi_completion.fuzzy = false
jedi_definition.enabled = true
jedi_definition.follow_imports = false
jedi_definition.follow_builtin_imports = false
jedi_hover.enabled = true
jedi_references.enabled = true
jedi_signature_help.enabled = true
jedi_symbols.enabled = true
